Use thread-safe refcounting for ModelTypeStoreBackend

This partially reverts a recent change in
https://chromium-review.googlesource.com/1129800 which is believed to
cause test flakes.

Bug: 864733
Change-Id: I2885a1527c56cf14d6d190af0b7667c7b6da56a5
Reviewed-on: https://chromium-review.googlesource.com/1141564
Reviewed-by: Mohamed Amir Yosef <mamir@chromium.org>
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575976}
Former-commit-id: 7a1a67afa46e33d019f1efa14235ea260478e62c